[package]
name = "sovereign-contract"
version = "0.2.0"
description = "Sovereign Deposit Contract — SOL + SPL Token support"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sovereign_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
